# Shiori-Agent

./: .gitignore  .graphifyignore  CONTEXT.md  README.md  config.example.toml  eslint.config.js  main.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pyrightconfig.tests.json  pytest.ini  requirements-dev.txt  requirements.txt  todoList.md  tsconfig.json
_handbook/: drift-guide.md
agent/: config.py  config_models.py  context.py  llm_json.py  memory.py  persona.py  provider.py  scheduler.py  scheduler_cron.py  skills.py
bootstrap/: app.py  channel_host.py  channels.py  conversation.py  dashboard_api.py  init_workspace.py  memory.py  proactive.py  providers.py  setup_wizard.py  tools.py  wiring.py
bus/: event_bus.py  events.py  events_lifecycle.py  internal_events.py  queue.py
coding_agents/: __init__.py  execution.py  models.py  orchestrator.py  orchestrator_context.py  orchestrator_execution.py  orchestrator_repositories.py  orchestrator_support.py  permissions.py  profiles.py  repository_trust.py  state_machine.py  store.py  store_approvals.py  store_plans.py  store_resources.py  store_rows.py  store_schema.py  workspace.py
conversation/: __init__.py  migrator.py  models.py  projector.py  push_sync.py  service.py  store.py
desktop/: package-lock.json  package.json  tsconfig.base.json  tsconfig.main.json  tsconfig.preload.json
desktop_bridge/: __init__.py  app_service.py  chat_service.py  image_service.py  models.py  observation_contract.py  observation_memory.py  observation_model.py  observation_safety.py  observation_service.py  (+11 more)
(+810 files in other folders)
